Bug 55828 - [Bisected Regression ILK]Piglit shaders/fp-kil causes GPU hung
Summary: [Bisected Regression ILK]Piglit shaders/fp-kil causes GPU hung
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: All Linux (All)
: high major
Assignee: Eric Anholt
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-10 09:01 UTC by lu hua
Modified: 2012-11-28 06:51 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
i915 error state (1.55 MB, text/plain)
2012-10-10 09:01 UTC, lu hua
Details

Description lu hua 2012-10-10 09:01:40 UTC
Created attachment 68392 [details]
i915 error state

System Environment:
--------------------------
Arch:             x86_64
Platform:         Ironlake
Libdrm: (master)libdrm-2.4.39-16-g14db948127e549ea9234e02d8e112de3871f8f9f
Xserver: (master)xorg-server-1.13.0-49-g0a75bd640b3dc26b89d9e342999a7f4b7e98edbf
Xf86_video_intel: (master)2.20.9-43-gfb5205a86da09b344dbc20598655e917c263125c
Libva: (staging)86484495155e65fd8ac33ed3ede43fb42defd966
Libva_intel_driver: (staging)f557dd6ad06c31bcf787468e804c948ecc4cf39b
Kernel:	 (drm-intel-nightly) 7735f5cccb4a57c5da5554f3e005bbd5f7325f40
Mesa:  (master)87a34131c427b40a561cfef1513b446a0eeabc39

Bug detailed description:
-------------------------
It happens on ironlake with mesa master branch.It doesn't happen on 9.0 branch.
spec_ARB_fragment_program_kil-swizzle also causes GPU huang.

The last known good commit:86de501f14f11f1e993c8703c0d69bdf1f6c7835
The last known bad commit: 87a34131c427b40a561cfef1513b446a0eeabc39

dmesg:
[  168.808646] [drm:i915_hangcheck_hung] *ERROR* Hangcheck timer elapsed... GPU hung
[  168.808760] [drm] capturing error event; look for more information in /debug/dri/0/i915_error_state
[  170.812582] [drm:i915_hangcheck_hung] *ERROR* Hangcheck timer elapsed... GPU hung
[  170.813149] [drm:i915_reset] *ERROR* GPU hanging too fast, declaring wedged!
[  170.813151] [drm:i915_reset] *ERROR* Failed to reset chip.

output:
GL_RENDERER = Mesa DRI Intel(R) Ironlake Desktop
Probe at (80,80)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 0.000000 0.000000 0.000000 1.000000
Probe at (12,112)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 0.000000 0.000000 0.000000 1.000000
PIGLIT: {'result': 'fail' }

Reproduce steps:
----------------------------
1. xinit
2. ./bin/fp-kil -auto
Comment 1 Eric Anholt 2012-10-16 00:31:39 UTC
The large range of commits covers my ARB_fp nuke series, so that was probably it.  Sad to see no bisect in QA reports.
Comment 2 lu hua 2012-10-16 09:21:10 UTC
Bisect shoes:97615b2d8c7c3cea6fd3a43bcb1739a96e2046c4 is the first bad commit
commit 97615b2d8c7c3cea6fd3a43bcb1739a96e2046c4
Author:     Eric Anholt <eric@anholt.net>
AuthorDate: Mon Aug 27 14:35:01 2012 -0700
Commit:     Eric Anholt <eric@anholt.net>
CommitDate: Mon Oct 8 08:50:27 2012 -0700

    i965: Replace brw_wm_* with dumping code into the fs_visitor.

    This makes a giant pile of code newly dead.  It also fixes TXB on newer
    chipsets, which has been totally broken (I now have a piglit test for that
    It passes the same set of Ian's ARB_fragment_program tests.  It also impro
    high-settings ETQW performance by 3.2 +/- 1.9% (n=3), thanks to better
    optimization and having 8-wide along with 16-wide shaders.

    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=24355
    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>
Comment 3 Eric Anholt 2012-10-31 20:02:48 UTC
To clarify: This apparently only happens on ILK and not any other platform.  I've tested IVB and GM45 personally, so I need to get the ILK up and test it.
Comment 4 Eric Anholt 2012-11-26 17:01:39 UTC
commit 97747ac88fe9207dde83b275a93ebcee3a84dc01
Author: Eric Anholt <eric@anholt.net>
Date:   Wed Nov 14 11:44:57 2012 -0800

    i965: Fix hangs with FP KIL instructions pre-gen6.
Comment 5 lu hua 2012-11-28 06:51:17 UTC
Verified.Fixed by commit 97747ac88fe9207dde83b275a93ebcee3a84dc01.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.